@@ -85,6 +85,9 @@ t/example-phone-numbers.t
 share/Number-Phone-UK-Data.db
 t/uk_slurp.t
 lib/Number/Phone/Formatter/NationallyPreferredIntl.pm
+t/country-test-ar.t
+t/country-test-mx.t
+t/country-test-sm.t
 lib/Number/Phone/StubCountry/AC.pm
 lib/Number/Phone/StubCountry/AD.pm
 lib/Number/Phone/StubCountry/AE.pm
@@ -330,6 +333,3 @@ lib/Number/Phone/StubCountry/YT.pm
 lib/Number/Phone/StubCountry/ZA.pm
 lib/Number/Phone/StubCountry/ZM.pm
 lib/Number/Phone/StubCountry/ZW.pm
-t/country-test-ar.t
-t/country-test-mx.t
-t/country-test-sm.t
