@@ -1,5 +1,7 @@
 XXXX-XX-XX      XXXXXX  Improved formatting of UK mobile and pager numbers
                           (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/75);
+                        Reinstate Kosovo squatting on +377, +381, and +386, as the change-
+                          over is apparently not yet complete;
 
 2018-04-10      3.4004  We now have some data from libphonenumber for Kosovo
                           (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/66);
